--- a/terminator/config
+++ b/terminator/config
@@ -1,11 +1,15 @@
 [global_config]
   always_split_with_profile = True
-  title_transmit_bg_color = "#001230"
+  title_transmit_bg_color = "#d30102"
+  suppress_multiple_term_dialog = True
   focus = system
+  tab_position = hidden
 [keybindings]
 [profiles]
   [[default]]
     background_image = None
+    use_theme_colors = True
+    show_titlebar = False
   [[solarized-dark]]
     palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
     background_color = "#002b36"
@@ -18,12 +22,19 @@
     background_image = None
     cursor_color = "#002b36"
     foreground_color = "#002b36"
+  [[Zenburn]]
+    title_transmit_bg_color = "#d30102"
+    palette = "#3f3f3f:#cc9393:#7f9f7f:#e3ceab:#dfaf8f:#cc9393:#8cd0d3:#dcdccc:#3f3f3f:#cc9393:#7f9f7f:#e3ceab:#dfaf8f:#cc9393:#8cd0d3:#dcdccc"
+    background_color = "#3f3f3f"
+    background_image = None
+    cursor_color = "#dcdcdc"
+    foreground_color = "#dcdcdc"
 [layouts]
   [[default]]
     [[[child1]]]
       type = Terminal
       parent = window0
-      profile = solarized-dark
+      profile = Zenburn
     [[[window0]]]
       type = Window
       parent = ""
